# near-samples

./: .gitignore
expense/: .gitignore  README.md  index.html  package-lock.json  package.json
expense/contract/: Cargo.toml  README.md  build.sh
expense/contract/src/: lib.rs
expense/src/: config.js  index.html
expense/src/css/: jquery-ui.css  style.css
expense/src/js/: config.js  index.js  utils.js
football-bet/: README.md  package.json
football-bet/contract/: Cargo.toml  README.md  build.sh
football-bet/contract/src/: lib.rs
football-bet/src/: App.js  config.js  index.html
football-bet/src/css/: style.css
football-bet/src/js/: app.js  config.js  index.js  utils.js
mynote/: .gitignore  README.md  package-lock.json  package.json
mynote/contract/: Cargo.toml  README.md  build.sh
mynote/contract/src/: lib.rs
mynote/neardev/: dev-account  dev-account.env
mynote/src/: app.js  config.js  index.html  index.js  index_near.html  main.test.js  style.css  utils.js
